style1.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");

/* Custom properties/variables  */
:root {
  --main-white: #a6a6a6;
  --navbar-white: #f1f0f0;
  --main-red: #337b41;
  --main-blue: #45567d;
  --main-gray: #303841;
  --font-family: "Roboto", sans-serf;
  --normal-font: 400;
  --bold-font: 700;
  --bolder-font: 900;
  --bg-color: #fcfcfc;
  --primary-color: #4756df;
  --secondary-color: #ff7235;
  --primary-shadow: #8b8eaf;
  --secondary-shadow: #a17a69;
  --bottom-margin: 0.5rem;
  --bottom-margin-2: 1rem;
  --line-height: 1.7rem;
  --transition: 0.3s;
}

/* Base reset */
* {
  margin: 0;
  padding: 0;
}

/* box-sizing and font sizing */
*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;

  /* Set font size for easy rem calculations
   * default document font size = 16px, 1rem = 16px, 100% = 16px
   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
  */
  font-size: 62.5%;
  scroll-behavior: smooth;
}

/* A few media query to set some font sizes at different screen sizes.
 * This helps automate a bit of responsiveness.
 * The trick is to use the rem unit for size values, margin and padding.
 * Because rem is relative to the document font size
 * when we scale up or down the font size on the document
 * it will affect all properties using rem units for the values.
*/

/* I am using the em unit for breakpoints
 * The calculation is the following
 * screen size divided by browser base font size
 * As an example: a breakpoint at 980px
 * 980px / 16px = 61.25em
*/

.burger-menu {
  color: var(--primary-color);
  font-size: 2rem;
  border: 0;
  background-color: transparent;
  cursor: pointer;
  display: none;
  }





/* Base styles */

body {
  font-family: 'Poppins', sans-serif;
  font-size: 1.8rem; /* 18px */
  font-weight: 400;
  line-height: 1.4;
  color: var(--main-white);
}

h1,
h2 {
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  text-align: center;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 4.2rem;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: var(--main-white);
}

img {
  display: block;
  width: 100%;
}

/* nav */

.nav {
  display: flex;
  justify-content: space-between;
  position: sticky;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--main-red);
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
  z-index: 1;
}

nav h1 {
    color: var(--navbar-white);
    justify-self: left;
  }
  
nav a {
color: var(--navbar-white);
transition: var(--transition);
}
nav a:hover {
color: var(--main-gray);
border-bottom: 2px solid var(--main-gray);
}

nav ul {
display: flex;
gap: 1.9rem;
padding-right: 3rem;

}

nav ul li {
font-weight: var(--bold-font);
margin: 0.5rem;
color: var(--main-white);
}

.nav-list {
  display: flex;
  margin-right: 2rem;
}

@media (max-width: 28.75em) {
  .nav {
    justify-content: center;
  }

  .nav-list {
    margin: 0 1rem;
  }
}

.nav-list a {
  display: block;
  font-size: 2.2rem;
  padding: 2rem;
}

.nav-list a:hover {
  background: var(--main-blue);
}

/* Welcome section */

.welcome-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: #000;
  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
}

.welcome-section > p {
  font-size: 3rem;
  font-weight: 200;
  font-style: italic;
  color: var(--main-red);
}

/* Projects section */

.projects-section {
  text-align: center;
  padding: 10rem 2rem;
  background: var(--main-blue);
}

.projects-section-header {
  max-width: 640px;
  margin: 0 auto 6rem auto;
  border-bottom: 0.2rem solid var(--main-white);
}

@media (max-width: 28.75em) {
  .projects-section-header {
    font-size: 4rem;
  }
}

/* "Automagic" image grid using no media queries */
.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 4rem;
  width: 100%;
  max-width: 1280px;
  margin: 0 auto;
  margin-bottom: 6rem;
}

@media (max-width: 30.625em) {
  .projects-section {
    padding: 6rem 1rem;
  }

  .projects-grid {
    grid-template-columns: 1fr;
  }
}

.project {
  background: var(--main-gray);
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.code {
  color: var(--main-gray);
  transition: color 0.3s ease-out;
}

.project:hover .code {
  color: #ff7f50;
}

.project-image {
  height: calc(100% - 6.8rem);
  width: 100%;
  object-fit: cover;
}

.project-title {
  font-size: 2rem;
  padding: 2rem 0.5rem;
}

.btn {
  display: inline-block;
  padding: 1rem 2rem;
  border-radius: 2px;
}

.btn-show-all {
  font-size: 2rem;
  background: var(--main-gray);
  transition: background 0.3s ease-out;
}

.btn-show-all:hover {
  background: var(--main-red);
}

.btn-show-all:hover > i {
  transform: translateX(2px);
}

.btn-show-all > i {
  margin-left: 10px;
  transform: translateX(0);
  transition: transform 0.3s ease-out;
}

/* Contact section */

.contact-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100%;
  height: 80vh;
  padding: 0 2rem;
  background: var(--main-gray);
}

.contact-section-header > h2 {
  font-size: 6rem;
}

@media (max-width: 28.75em) {
  .contact-section-header > h2 {
    font-size: 4rem;
  }
}

.contact-section-header > p {
  font-style: italic;
}

.contact-links {
  display: flex;
  justify-content: center;
  width: 100%;
  max-width: 980px;
  margin-top: 4rem;
  flex-wrap: wrap;
}

.contact-details {
  font-size: 2.4rem;
  text-shadow: 2px 2px 1px #1f1f1f;
  transition: transform 0.3s ease-out;
}

.contact-details:hover {
  transform: translateY(8px);
}

/* Footer */

footer {
  font-weight: 300;
  display: flex;
  justify-content: space-evenly;
  padding: 2rem;
  background: var(--main-gray);
  border-top: 4px solid var(--main-red);
}

footer > p {
  margin: 2rem;
}

footer i {
  vertical-align: middle;
}

@media (max-width: 28.75em) {

}
/* Hero section */
.hero {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5rem;
    /* max-width: 85rem; */
    margin: auto 10rem;
    }

.hero img {
/* height: 37.5rem; */
max-width: 37.5rem;
border-radius: 5%
}

.bio {
max-width: 60rem;
padding: 0.625rem;
border-radius: 6px;
box-shadow: 0px 2px 15px 2px var(--primary-shadow);
max-height: 62rem;
}

.bio h1 {
margin-bottom: var(--bottom-margin);
}

.bio p {
font-size: 1.5rem;
line-height: 3rem;
padding: 0.3rem 0;
}
.skill {
  background-color: #fff;
  border-radius: 11px;
  box-shadow: 0 3px 10px var(--secondary-shadow);
  padding: 20px;
  margin: 10px;
}
.skill:hover {
  background-color: rgb(244, 244, 244);
  border-radius: 11px;
  box-shadow: 0 3px 10px var(--secondary-shadow);
  padding: 20px;
  margin: 10px;
}

.skills {
    max-width: 68.75rem;
    margin: auto;
    text-align: center;
    margin-top: 2.5rem;
  }
  
  .skill-header {
    margin-bottom: 1rem;
  }
  
  .skills-wrapper img {
    padding: 1.25rem;
  }
  
  .icon {
    width: 11.875rem;
    height: 11.25rem;
  }


ion-icon {
font-size: 64px;
}

.icon-card {
    background-color: #fff;
    border-radius: 11px;
    box-shadow: 0 3px 10px var(--secondary-shadow);
    padding: 20px;
    margin: 10px;
  }

  .projects {
    background-color: var(--bg-color);
    padding: 32px 0;
    margin-top: 2rem;
  }
  
  .project-pic {
    width: 65%;
    height: 60%;
  }
  
  .projects-container {
    display: flex;
    align-items: center;
    justify-content: center;
  }



.project-container p {
    padding: 0.4rem;
  }
  
  .project-title {
    margin-bottom: var(--bottom-margin);
  }
  
  .project-details {
    margin-bottom: var(--bottom-margin);
    list-style-type: circle;
    margin: 10px;

  }
  
  .project-card {
    background-color: #fff;
    border-radius: 11px;
    box-shadow: 0 3px 10px var(--primary-shadow);
    padding: 20px;
    margin: 10px;
    
  }

.project-pic{
  height: 20rem;
}

  .socials {
    display: flex;
    flex-direction: column;
    position: fixed;
    right: 1%;
    bottom: 50%;
  }
  
  .socicon {
    width: 5rem;
    height: 5rem;
  }

  .socicon:hover {
    background-color: rgb(244, 244, 244);
    border-radius: 6px;
  }

  footer {
    background-color: var(--bg-color);
    padding: 1.25rem;
    text-align: center;
    margin: 2rem 0 0;
  }

  .image {
    width: 50rem;
    display: block;
  margin-left: auto;
  margin-right: auto;
  }

  .scroll-up {
    position: fixed;
    right: 0.5%;
    bottom: 3%;
    cursor: pointer;
  }
  
  .up-arrow {
    width: 5rem;
    height: 5rem;
  }





/* 1200px / 16px = 75em */
@media screen and (max-width: 50em) {
  html {
    font-size: 30%;
  }

  nav{
    padding: 1.5rem 1rem;
  }

  h2 {
    font-size: 3rem;
  }
  /* h1 {
    font-size: 2rem;
}
  nav h1 {
    font-size: 3rem;
  } */

  nav ul {
    position: fixed;
    background-color: var(--main-red);
    flex-direction: column;
    top: 86px;
    left: 10%;
    width: 80%;
    text-align: center;
    transform: translateX(120%);
    transition: transform 0.5s ease-in;
    border-radius: 1rem;
  }



nav ul.show {
  transform: translateX(0);
}

.burger-menu {
    color: var(--navbar-white);
    font-size: 2rem;
    border: 0;
    background-color: transparent;
    cursor: pointer;
    display: block;
  }

  .hero-img {
    width: 15rem;
  }

  .bio {
    max-height: 25rem;
  }
  
  .bio p {
    font-size: 1.25rem;
    line-height: 1.5rem;
    padding: 0.2rem 0;
    }
    
  .bio h2 {
    font-size: 2rem; 
    line-height: 1.5rem;
    padding: 0.2rem 0;
    }

    footer {
      flex-direction: column;
      text-align: center;
    }
}


.row {
  display: flex; /* equal height of the children */
  align-items: center;

}

.col {
  flex: 1; /* additionally, equal width */
  padding: 1em;
}

